--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,37 @@
-a {
+.course-content a {
     outline: none;
 }
 
-ul.icons {
+.grid_title {
+    font-size:          160%;
+    font-weight:        bold;
+}
+
+h3.sectionname {
+	background: transparent !important;
+	font-weight: norma !important;
+	font-size: 1.9em;
+	border: 0px none !important;
+	border-bottom: dashed 1px #000 !important;
+	padding: 0px !important;
+	padding-bottom: 5px !important;
+}
+
+.course-content ul.topics li#section-0, 
+.course-content ul.weeks li#section-0 {
+	background: transparent;
+	border: 0px none;
+}
+
+/* @group Topic Icons */
+
+.course-content ul.icons {
     list-style:         none;
     padding:            0;
     margin:             0;
 }
 
-#iconContainer {
+.course-content #iconContainer {
     width:              510px;
     overflow:           auto;
     padding:            0 0 50px 0;
@@ -16,7 +39,7 @@ ul.icons {
     margin-right: auto;
 }
 
-ul.icons li {
+.course-content ul.icons li {
     width:              220px;
     overflow:           hidden;
     float:              left;
@@ -28,22 +51,22 @@ ul.icons li {
     display:            block;
 }
 
-ul.icons li:hover {
+.course-content ul.icons li:hover {
     background-color:   #f1f2f2;
     color:              #333;
 }
 
-ul.icons img.new_activity {
+.course-content ul.icons img.new_activity {
     position:           absolute;
     margin-top:         90px;
     margin-left:        128px;
 }
 
-.icon_link {
+.course-content .icon_link {
     cursor:             pointer;
 }
 
-ul.icons li p.icon_content {
+.course-content ul.icons li p.icon_content {
     font-size:          14px;
     font-weight:        bold;
     margin:             0 0 3px 0;
@@ -54,34 +77,25 @@ ul.icons li p.icon_content {
     height:             20px;
 }
 
-ul.icons li .image_holder {
+.course-content ul.icons li .image_holder {
     width:              218px;
     height:             140px;
     overflow:           hidden;
     border:             1px solid #ddd;
     background-color:   #f1f2f2;
 }
-ul.icons li:hover .image_holder {
+.course-content ul.icons li:hover .image_holder {
     border:             1px solid #dededf;
 }
-ul.icons li img { 
+.course-content ul.icons li img { 
     margin-top:         0;
 }
 
-.grid_title {
-    font-size:          160%;
-    font-weight:        bold;
-}
 
-#middle-column.no_right_bar {
-    margin-right:       0;
-}
 
-#middle-column.no_left_bar {
-    margin-left:        0;
-}
+/* @end */
 
-/** Shadebox stuff from here down **/
+/* @group Shadebox */
 
 div#shadebox_overlay {
     position:           fixed;
@@ -121,25 +135,13 @@ div#shadebox_overlay {
 	padding-top: 2px;
 }
 
-h3.sectionname {
-	color: #a71e38 !important;
-	background: transparent !important;
-	font-weight: norma !important;
-	font-size: 1.9em;
-	border: 0px none !important;
-	border-bottom: dashed 1px #a71e38 !important;
-	padding: 0px !important;
-	padding-bottom: 5px !important;
-}
-
-ul.topics li#section-0, ul.weeks li#section-0 {
-	background: transparent;
-	border: 0px none;
-}
-
 #shadebox_close {
     position:           absolute;
     top:                -10px;
     right:              -10px;
     cursor:             pointer;
 }
+
+
+
+/* @end */
